; ModuleID = '/home/carl/AnghaBench/libsodium/src/libsodium/crypto_box/curve25519xsalsa20poly1305/extr_box_curve25519xsalsa20poly1305.c_crypto_box_curve25519xsalsa20poly1305_afternm.c'
source_filename = "/home/carl/AnghaBench/libsodium/src/libsodium/crypto_box/curve25519xsalsa20poly1305/extr_box_curve25519xsalsa20poly1305.c_crypto_box_curve25519xsalsa20poly1305_afternm.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @crypto_box_curve25519xsalsa20poly1305_afternm(i8* %0, i8* %1, i64 %2, i8* %3, i8* %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i64, align 8
  %9 = alloca i8*, align 8
  %10 = alloca i8*, align 8
  store i8* %0, i8** %6, align 8
  store i8* %1, i8** %7, align 8
  store i64 %2, i64* %8, align 8
  store i8* %3, i8** %9, align 8
  store i8* %4, i8** %10, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = load i8*, i8** %7, align 8
  %13 = load i64, i64* %8, align 8
  %14 = load i8*, i8** %9, align 8
  %15 = load i8*, i8** %10, align 8
  %16 = call i32 @crypto_secretbox_xsalsa20poly1305(i8* %11, i8* %12, i64 %13, i8* %14, i8* %15)
  ret i32 %16
}

declare dso_local i32 @crypto_secretbox_xsalsa20poly1305(i8*, i8*, i64, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
